mystyle.css
body {
    margin: 0;
    padding: 0;
    font-family: 'Montserrat', sans-serif;
    color: #000;
    display: flex;
    flex-direction: column;
    align-items: center;
    text-align: center;
    box-sizing: border-box;
    background-image: url('resources/wp6193134.jpg');
    background-position: center;
    background-repeat: no-repeat;
    background-size: cover;
    position: relative;
}

/* มือถือ */
@media screen and (max-width: 767px) {

    ::-webkit-scrollbar-track {
        -webkit-box-shadow: inset 0 0 3px rgb(255, 254, 254);
        background-color: hsl(0, 0%, 100%);
    }

    ::-webkit-scrollbar {
        width: 10px;
        background-color: #fbfbfb;
    }

    ::-webkit-scrollbar-thumb {
        background-color: rgb(223, 236, 233);
        border: 2px solid #ffffff;
    }




    body {
        font-size: 0.875rem;
        overflow: scroll;
    }

    h3 {
        display: block;
        font-size: 2em;
        margin-block-start: 1em;
        margin-block-end: 1em;
        margin-inline-start: 0px;
        margin-inline-end: 0px;
        font-weight: bold;
        unicode-bidi: isolate;
    }

    .content h1 {
        font-size: 2em;
    }

    .h1 {
        font-size: 1rem;
        padding: 10px;
    }

    .navbar .logo {
        font-size: 2em;
    }

    .navbar {
        margin: 0;
        padding: 0;
        width: 200px;
        position: fixed;
        height: 70px;
        overflow: visible;
        display: block;
    }

    .navbar a {
        display: flex;
        justify-content: center;
        color: black;
        padding: 5px;
        text-decoration: none;
        text-align: center;
        float: none;
        margin-right: 10px;
        margin-left: 10px;




    }

    .navbox {
        display: flex;
        justify-content: center;

        margin-right: 0px;

    }

    .navbar ul {
        list-style: none;
        display: flex;
        padding: 0px;

    }

    a:link,
    a:visited {

        padding: 5px 15px;

    }

    .main-image {
        width: 300px;
        height: 300px;
        border-radius: 16px;
    }

    .main-image-box {
        max-width: 300px;
        padding-top: 0px;
        padding-left: 0px;
        padding-right: 00px;
        margin-top: 0px;
        height: 180px;
        margin-bottom: 0px;

    }

    video {
        width: 300px;
        aspect-ratio: auto 300 / 150;
        height: 150px;
    }

    h1,
    h3 {
        font-family: 'Courier New', Courier, monospace;
        padding: 10px;
        justify-content: center;
        text-align: center;
    }

    h2 {
        font-family: 'Courier New', Courier, monospace;
        padding: 10px;
        justify-content: center;
        text-align: center;
        font-size: 2em;
    }

    p {
        margin: 15px;
    }

    .Heart-box {
        display: block;
        margin-left: 50px;
        margin-right: 50px;
        margin-top: 0px;

    }

    .journey-image-box {

        margin-right: 0px;

    }

    .year2-image {
        width: 300px;
    }

    .year3-image {
        width: 300px;
    }

    .year4-image {
        width: 300px;
    }

    .animation-wrapper {
        display: none;
    }
    .CENTER-JOURNEY {
        display: flex;
        flex-wrap: wrap;
        justify-content: center;
        align-content: center;
        align-items: center;
    }
    .circle {
        display: none;
    }
}

/* แท็ปเล็ต */
@media screen and (min-width: 768px) and (max-width: 1024px) {}

/* PC */
@media screen and (orientation: landscape) {
    body {
        font-size: 1.25rem;
    }

    video {
        width: 500px;
        aspect-ratio: auto 500 / 300;
        height: 300px;
    }

    .main-image-box {
        max-width: 500px;
    }

    .main-image {
        height: 300px;
        border-radius: 16px;
    }

    .logo {
        padding: 20px;
        margin-left: 5%;

    }

    .navbar a {
        margin: 5px;
    }

    .navbar {
        display: flex;
        height: 60px;
        height: 100px;
    }

    .navbar .logo {
        font-size: 1.5em;
    }

    a:link,
    a:visited {

        padding: 15px 15px;

    }

    .navbox {
        background-color: #ffffff;
        margin-right: 5%;
    }

    .content h1 {
        font-size: 3em;
    }

    .main-image,
    .journey-image,
    .year2-image,
    .year3-image,
    .year4-image {
        width: 500px;
        height: 300px;
    }
    .CENTER-JOURNEY{
        display: flex;
        justify-content: center;
    }
    h1,
    h3 {
        font-family: 'Courier New', Courier, monospace;
        padding: 20px;
        justify-content: center;
        text-align: center;
    }

    h2 {
        font-family: 'Courier New', Courier, monospace;
        padding: 20px;
        justify-content: center;
        text-align: center;
        font-size: 2em;
    }

    h3 {
        font-size: 2em;
    }

    .navbar ul {
        gap: 15px;
    }

    .Heart-box {
        display: flex;
        margin-top: 50px;
    }

    .journey-image-box {
        display: table-cell;
        margin-right: 50px;

    }

    .year2-image {
        width: 500px;
    }

    .year3-image {
        width: 500px;
    }

    .year4-image {
        width: 500px;
    }
}

h1,
h3 {
    font-family: 'Courier New', Courier, monospace;
    padding: 20px;
    justify-content: center;
    text-align: center;
}

h2 {
    font-family: 'Courier New', Courier, monospace;
    padding: 20px;
    justify-content: center;
    text-align: center;

}





a:link,
a:visited {
    background-color: rgb(223, 236, 233);
    color: black;
    border: 2px solid rgb(255, 255, 255);

    text-align: center;
    text-decoration: none;
    display: inline-block;
    border-radius: 16px;
}

a:hover,
a:active {
    background-color: rgb(116, 98, 98);
    border-radius: 16px;
}



.navbox {
    border-radius: 16px;

    height: 100%;

}

.navbar .logo {

    align-items: center;
    font-weight: bold;

    animation: logo-color-animation 8s infinite;
}

.navbar {

    justify-content: space-between;
    align-items: center;
    width: 100%;
    padding: 20px;
    background-color: #000;
    position: sticky;
    top: 0;
    z-index: 1000;
    border-radius: 0px;
}

.footer {
    padding: 30px;
    background-color: #000;
    color: #fff;
    width: 96%;
    text-align: center;
    position: relative;
}

.navbar ul {
    list-style: none;
    display: flex;
}

.navbar a {
    font-weight: 700;
    display: block;
}

.section {
    display: flex;
    justify-content: center;
    text-align: center;
    margin: 50px 20px;
    max-width: 1200px;

}

.content {
    flex: 1;

}



.content p {
    margin: 20px;
}

.main-image-box {
    padding: 10px;
    margin: 10px 0;
    border-radius: 8px;
    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
    background-color: rgba(249, 249, 249, 0.7);


}

.main-image-box:hover {
    box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
}

.main-image {


    background-image: url('resources/IMG_9409.jpg');
    background-size: contain;
    background-repeat: no-repeat;

}

.journey-image {
    background-image: url('resources/IMG_4291.jpg');
    height: 300px;
    background-size: contain;
    background-repeat: no-repeat;
    width: 230px;
    border-radius: 18px;
    position: relative;
}

.Language-image {
    background-image: url('resources/computer-programming-web-development-computer-icons-source-code-computer-software-coding-891957f2eb3161d1336d2abb50b49e5d.png');
    height: 300px;
    background-size: contain;
    background-repeat: no-repeat;
    position: relative;
    top: 50px
}

.Unity-image {
    background-image: url('resources/g9ha1b66hg208b5t72c164kl3m.png');
    height: 300px;
    background-size: contain;
    background-repeat: no-repeat;
    top: 50px;
    position: relative;

}

.journey-image-box {
    padding: 10px;
    margin: 10px 0;
    border-radius: 8px;
    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
    background-color: rgba(249, 249, 249, 0.7);
    max-width: 230px;

    width: 230px;
}

.journey-image-box:hover {
    box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
}
.container {
    padding: 5px;
}

.year2-image {
    background-image: url('resources/code-1084923_960_720.webp');

    background-size: contain;
    background-repeat: no-repeat;
    height: 300px;
    border-radius: 16px;
}

.year3-image {
    background-image: url('resources/INTERn.png');

    background-size: contain;
    background-repeat: no-repeat;
    height: 300px;
    border-radius: 16px;
}

.year4-image {
    background-image: url('resources/AIT.png');

    background-size: contain;
    background-repeat: no-repeat;
    height: 300px;
    border-radius: 16px;
}



p {
    font-family: 'Courier New', Courier, monospace;
    font-size: large;
    font-weight: bold;
    justify-content: center;
    text-align: center;
}

.article {
    justify-content: center;
    text-align: center;
}



.video-box {
    padding: 10px;
    margin: 10px 0;
    border-radius: 8px;
    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
    background-color: rgba(249, 249, 249, 0.7);

}

.video-box:hover {
    box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
}

.video-box video {
    object-fit: contain;
    overflow-clip-margin: content-box;
    overflow: clip;
    align-items: center;
    max-width: 500px;

}







.Me-image {
    background-image: url('resources/351473405_257921313481612_1110126668839952854_n.jpg');


}

.Heart-image {
    background-image: url('resources/Tumblr.gif');

}

.You-image {
    background-image: url('resources/yoi.jpg');

}


.Heart-box {
    justify-content: space-around;
    align-items: center;
    background-color: rgba(255, 255, 255, 0.8);
    padding: 20px;
    border-radius: 10px;

    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
    margin-bottom: 30px;
}

.Heart-box:hover {
    box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
}

.Me-image,
.Heart-image,
.You-image {
    width: 100px;
    height: 100px;
    background-size: cover;
    background-repeat: no-repeat;
    border-radius: 32px;
    padding: 50px;
    display: inline-flex;
}

















































.animation-wrapper {
    display: flex;
    gap: 10px;
}

.circle {
    position: relative;
    width: 20px;
    height: 20px;
    border-radius: 50%;
    background-color: turquoise;
    animation: move-the-circle 1s infinite;
    transform-origin: center center;
}

.circle:nth-child(1) {
    animation-delay: 0.1s;
}

.circle:nth-child(2) {
    animation-delay: 0.2s;
}

.circle:nth-child(3) {
    animation-delay: 0.3s;
}

.circle:nth-child(4) {
    animation-delay: 0.4s;
}

.circle:nth-child(5) {
    animation-delay: 0.5s;
}

.circle:nth-child(6) {
    animation-delay: 0.6s;
}

.circle:nth-child(7) {
    animation-delay: 0.7s;
}

.circle:nth-child(8) {
    animation-delay: 0.8s;
}

@keyframes move-the-circle {
    0% {
        transform: translate(0, 0) scale(1);
        opacity: 1;
        background-color: rgba(39, 240, 56, 0.596);
    }

    50% {
        transform: translate(0, 10px) scale(0.4);
        opacity: 0.5;
        background-color: rgb(0, 0, 0);
    }

    100% {
        transform: translate(0, 0) scale(1);
        opacity: 1;
        background-color: rgb(255, 255, 255);
    }
}

@keyframes logo-color-animation {
    12.5% {
        color: rgb(196, 73, 245);
    }

    25% {
        color: skyblue;
    }

    37.5% {
        color: rgb(85, 114, 212);
    }

    50% {
        color: rgb(99, 200, 156);
    }

    62.5% {
        color: rgb(240, 200, 130);
    }

    75% {
        color: rgb(248, 119, 59);
    }

    87.5% {
        color: rgb(245, 55, 55);
    }

    100% {
        color: rgb(250, 101, 218);
    }

    87.5% {
        color: rgb(245, 55, 55);
    }

    75% {
        color: rgb(248, 119, 59);
    }

    62.5% {
        color: rgb(240, 200, 130);
    }

    50% {
        color: rgb(99, 200, 156);
    }

    37.5% {
        color: rgb(85, 114, 212);
    }

    25% {
        color: skyblue;
    }


}

